[build-system]
requires = ["flit"]
build-backend = "flit.buildapi"

[tool.flit.metadata]
module = "atomate_gui"
author = "Atomate GUI Development Team"
author-email = "mkhorton@lbl.gov"
home-page = "https://github.com/hackingmaterials/atomate-gui"
requires = [
	"atomate",
	"mp_dash_components",
	"dash==0.29.0rc6",
	"dash-renderer==0.15.0rc2",
	"dash-core-components==0.31.0rc2",
	"dash-html-components==0.14.0rc2",
	"dash-table-experiments>=0.6.0",
	"gunicorn>=19.7.1",
	"Flask-Caching>=1.3.3"
]
requires-python=">=3.6.1"

[tool.flit.scripts]
atomate = "atomate_gui.cli:cli"